<resources>
    <string name="app_name">MyUKT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="forgot">Mot de passe oublié?</string>
    <string name="sign_in">Connexion</string>
    <string name="your_password">Mot de passe</string>
    <string name="your_email">Address E-mail</string>
    <string name="sign_in_request">Se Connecter à MyUKT</string>
    <string name="home">Accueil</string>
    <string name="you_should_enter_password">Vous devez introduire votre mot de passe!</string>
    <string name="you_should_enter_email">Vous devez introduire votre address e-mail!</string>
    <string name="you_should_enter_valid_email">Vous devez introduire une address e-mail valide!</string>
    <string name="forget_password_rasponse">Nous allons vous envoyer un e-mail</string>
    <string name="my_time_table">Mon emploi du temps</string>
    <string name="my_news">Mes nouvelles</string>
    <string name="my_messeges">Mes messages</string>
    <string name="my_requests">Mes documents</string>
    <string name="my_life">Ma Vie</string>
    <string name="my_reminders">Mes Rappels</string>
    <string name="my_satitistiques">Mes statistiques</string>
    <string name="settings">Paramettres</string>
    <string name="settings_app">Paramettres d\'Application</string>
    <string name="settings_persn">Vos informations personnels </string>
    <string name="log_out">Se deconnecter</string>
    <string name="welcome_to_muUkt">Bienvenu à MyUKT</string>
    <string name="grp">Groupe</string>
    <string name="level">Niveau</string>
    <string name="enable_notifications">Activer les notifications</string>
    <string name="enable_sound">Activer le Son</string>
    <string name="enable_reminders">Activer les Rappels</string>
    <string name="email">e-mail</string>
    <string name="home_twon">Habite à</string>
    <string name="birth_date">née le</string>
    <string name="change_avatar">Changer votre Avatar</string>
    <string name="change_password">Changer votre mot de passe</string>
    <string name="new_password">nouveau mot de passe</string>
    <string name="old_password">ancien mot de passe</string>
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="student_male">Etudiant</string>
    <string name="student_female">Etudiante</string>
    <string name="title_activity_admin_profil">AdminProfilActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="goHome">Aller </string>
    <string name="admin_label">Admin</string>
    <string name="send_a_msg">Envoyer un message</string>
    <string name="teacher_female">Enseignante</string>
    <string name="teacher_male">Enseignant</string>
    <string name="responsability_label">responsabilité</string>
    <string name="specialty">specialité</string>
    <string name="add_date">ajouté le</string>
    <string name="save">sauvgarder</string>
    <string name="refactor">reinisialiser</string>
    <string name="title_activity_setting">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="sat">Samedi</string>
    <string name="sun">Dimanche</string>
    <string name="mon">Lundi</string>
    <string name="tue">Mardi</string>
    <string name="wed">Mercredi</string>
    <string name="thu">Jeudi</string>
    <string name="fri">Vendredi</string>
    <string-array name="multi_select_list_preference_default_value"/>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="change_of_password">Changement du mot de passe</string>
    <string name="conirmation_of_new_password">confirmer le nouveau mot de passe</string>
    <string name="change">changer</string>
    <string name="change_at_least_a_char">Vous devez changer au moin un caractére</string>
    <string name="enter_new_paasword_first">Vous devez introduire le nouveau mot de passe d\'abord</string>
    <string name="enter_old_password_first">Vous devez introduire l\'ancien mot de passe d\'abord</string>
    <string name="your_new_avatar">Votre nouvel Avatar</string>
    <string name="cancel">Annuler</string>
    <string name="valid">valider</string>
    <string name="are_u_sure_of_log_out">Voulez-vous vraiment vous deconnecté</string>
    <string name="log_out_warning">Si vous deconnecter queque informations imprtantes serons supprimer</string>
    <string name="place_esth">Lieu</string>
    <string name="chez">Chez</string>
    <string name="has_published">a publié</string>
    <string name="has_liked">a aimé</string>
    <string name="didnt_like">n\'a pas aimer</string>
    <string name="d_lais">délais</string>
    <string name="reasons">raisons</string>
    <string name="date">date</string>
    <string name="exam_type">type d\'examen</string>
    <string name="module">module</string>
    <string name="new_session">nouvelle Seance</string>
    <string name="old_session">ancienne seance</string>
    <string name="session">seance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">Nouvelles</string>
    <string name="pedag_procedu">Procedure Pedagogique</string>
    <string name="change_of_session">Changement de Séance</string>
    <string name="consultation">Consultation</string>
    <string name="exam">Examens</string>
    <string name="holyday">Vaconces</string>
    <string name="marks_des">Affichage des notes</string>
    <string name="meeting">Runion</string>
    <string name="strike">Gréve</string>
    <string name="ready_doc">Document Prét</string>
    <string name="doc_on">Document pris en charge</string>
    <string name="doc_req">Demandes de document</string>
    <string name="add_an_activity">Ajouter une activité</string>
    <string name="add_a_new">Ajouter une Nouvlle</string>
    <string name="write_a_new_msg">Ecrire Un nouveau Message</string>
    <string name="write_a_new_req">Rediger une nouvelle demande</string>
    <string name="add_a_reminder">Ajouter un rappel</string>
    <string name="activity_name">Nom d\'activité</string>
    <string name="notes">notes</string>
    <string name="emplacement">Emplacement</string>
    <string name="add">Ajouter</string>
    <string name="at">Heure</string>
    <string name="repeat_num">répéter</string>
    <string name="until">Jusqu à</string>
    <string name="just_once">Juste une fois</string>
    <string name="daily">Chaque jours</string>
    <string name="weekly">Chaque Semaine</string>
    <string name="monthly">Chaque mois</string>
    <string name="send_msg_to">distinatére</string>
    <string name="nom_du_document">Nom du document</string>
    <string name="ur_msg">Votre msg ...</string>
    <string name="reason_for_doc">La raison d\'extraction du document</string>
    <string name="reminder_name">Nom du rappel</string>
    <string name="reminder_des">Descrition du rappel...</string>
    <string name="date_and_time_of_reminder">Date et heure du rappel</string>
    <string name="title_news">Titre</string>
    <string name="content_news">Contenu...</string>
    <string name="visible_to">visible à</string>
    <string name="enable_comments">activer les commentaires pour</string>
    <string name="to">à</string>
    <string name="chercher_un_utilisateur">Chercher un utilisateur</string>
    <string name="seen_at">vu le </string>
    <string name="error_happend_retry">une erreur a été produite vous devez réessayez !</string>
    <string name="this_user_doesn_t_exist">Cet utilisateur n\'existe pas</string>
    <string name="admins_can_t_connect">Le membres d\'administration ne peuvent pas se connecter</string>
    <string name="error_password">Votre mot de passe est incorrect</string>
    <string name="my_marks">Mes Notes</string>
    <string name="my_absences">Mes Absences</string>
    <string name="vos_demandes_de_document">Vos Demandes de document</string>
    <string name="vos_notes">Vos Notes</string>
    <string name="vos_absences">Vos Absences</string>
    <string name="vos_messages">Vos Messages</string>
    <string name="votre_emploi_du_temps">Votre emploi du temps</string>
    <string name="toutes_les_nouvelles">Toutes les Nouvelles</string>
    <string name="vous_pouvez_aussi_ajouter_quelquelque_information">Vous pouvez aussi ajouter quelquelque information :</string>
    <string name="present_users">utilisateur présents</string>
    <string name="vous_avez_absenter">Vous avez absenter</string>
    <string name="td">TD</string>
    <string name="tp">TP</string>
    <string name="cours">cours</string>
    <string name="vous_avez_eu">vous avez eu</string>
    <string name="classroom">Salle</string>
    <string name="partager_ma_localisation">Partager Ma localisation</string>
    <string name="vous_etes_libres_cette_journn_e">Vous êtes libre cette journnée</string>
    <string name="no_news">Pas de nouvelles ! ...</string>
    <string name="no_ready_req">Pas de demandes prétes !...</string>
    <string name="no_req_sent">Aucune demande est envoyée</string>
    <string name="u_havn_t_been_absent">Vous n\'avez pas encore absenter</string>
    <string name="no_marks_displayed">Aucune note est Affichées !</string>
    <string name="sharing_location">Partage en cours</string>
    <string name="ur_location_is_shared">Votre Localisation est partagée</string>
    <string name="no_cnx_getAll_user">Pas de connexion l\'affichage n\'est pas complet !</string>
    <string name="sauvgarde_avec_succ">sauvgardé avec succée</string>
    <string name="msg_sent">Message envoyé</string>
    <string name="pourquoi_vous_n_avez_pas_aimer_la_pulblication_de">Pourquoi vous n\'avez pas aimer la pulblication de</string>
</resources>