<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background_primary"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:textColor="@color/green_white"
        android:text="@string/change_of_password"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:tint="@color/green_white"
        android:src="@drawable/icons8resaisircodepinfilled50"/>
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/old_password"
        android:textColor="@color/blank"
        android:drawableLeft="@drawable/icons8ouvrir32"
        android:drawableTint="@color/gray"
        android:drawablePadding="10dp"
        android:textColorHint="@color/gray_light"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
        android:layout_marginBottom="5dp"
        android:hint="@string/old_password"
        android:layout_height="wrap_content"
        android:maxLength="30"/>
    <EditText
        android:layout_width="match_parent"
        android:textColor="@color/blank"
        android:layout_marginLeft="10dp"
        android:id="@+id/new_password"
        android:padding="10dp"
        android:drawableLeft="@drawable/cadnas32"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/gray_light"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
        android:inputType="textPassword"
        android:drawableTint="@color/gray_light"
        android:layout_marginRight="10dp"
        android:hint="@string/new_password"
        android:layout_height="wrap_content"
        android:maxLength="30"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/change"
        android:textColor="@color/yello"
        android:drawableTint="@color/yello"
        android:drawableTop="@drawable/icons8modifier32"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:id="@+id/change_password_button"
        android:layout_gravity="center"
        />
</LinearLayout>