<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="projects.uikt.com.myukt.HomeActivity"
    tools:showIn="@layout/app_bar_home">
    <ScrollView
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="40dp"
                    android:layout_gravity="center"
                    android:id="@+id/avatar_home"
                    android:src="@drawable/l156979331009587885853566914702436392714949n"
                    android:layout_height="40dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="16sp"
                    android:id="@+id/hi_txv_home"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/blue"
                    android:drawableRight="@drawable/icons8saluerfilled50"
                    android:text="Salut Nour El Imane ! "/>
            </LinearLayout>
    
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Bienvenu à myUKT"
                android:layout_marginLeft="5dp"
                android:textColor="@color/blue_button"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/logo32x32"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:text="Vous pouvez consulter : "
                android:layout_height="wrap_content"/>
            <GridLayout
                android:layout_width="match_parent"
                android:columnCount="2"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:drawableTop="@drawable/icons8schedule32"
                    android:drawableTint="@color/blue_pramary_light"
                    android:text="@string/votre_emploi_du_temps"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/icons8news32"
                    android:drawableTint="@color/red_light"
                    android:text="@string/toutes_les_nouvelles"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableTop="@drawable/icons8gmail32"
                    android:drawableTint="@color/red"
                    android:text="@string/vos_messages"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:drawableTop="@drawable/icons8cambriolage32"
                    android:drawableTint="@color/green_white"
                    android:text="@string/vos_absences"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableTop="@drawable/icons8documents32"
                    android:drawableTint="@color/blue_light"
                    android:text="@string/vos_demandes_de_document"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:drawableTop="@drawable/icons8examen24"
                    android:drawableTint="@color/yello"
                    android:text="@string/vos_notes"
                    android:id="@+id/vos_notes_txv"
                    android:layout_height="wrap_content"/>
            </GridLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:textSize="18dp"
                android:layout_marginLeft="20dp"
                android:text="@string/vous_pouvez_aussi_ajouter_quelquelque_information"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>
   
    
</LinearLayout>
